<resources>
    <string name="app_name">Was het droog of niet?</string>
    <string name="action_settings">Settings</string>
    <string name="laatste">Laatste melding</string>
    <string name="datumtijd">06–01–2016 13:10</string>
    <string name="waar">Wageningen</string>
    <string name="droognat">Droog</string>
    <string name="persstats">Droog/Nat</string>
    <string name="onbekend">Onbekend</string>
    <string name="droog">Droog 9 (90%)</string>
    <string name="nat">Nat 1 (10%)</string>
    <string name="eigen_meldingen">Eigen meldingen</string>
    <string name="aantal_droog">Aantal droog:</string>
    <string name="aantal_nat">Aantal nat:</string>
    <string name="uitleg">Met deze App kunt u aangeven of het droog was of regende de laatste keer dat u naar buiten ging.\n
        Druk op de knop Droog of op de knop Regen.</string>
    <string name="sinds">Sinds:</string>
    <string name="gemmpd">Gemiddeld/dag:</string>
    <string name="plaats">Plaats</string>
    <string name="per_plaats">Per plaats</string>
    <string name="dag">Dag</string>
    <string name="per_dag">Per dag</string>
    <string name="aantal_gebruikers">Aantal gebruikers</string>
    <string name="aantal_meldingen_per_dag">Dag</string>
    <string name="EersteMelding">Eerste melding:</string>
    <string name="LaatsteMelding">Laatste melding:</string>
    <string name="SpreukVddag">Spreuk van de dag</string>
    <string name="Weer3uur">Het weer in %s</string>
    <string name="grad">3 °C</string>
    <string name="windkracht">15 km/h</string>
    <string name="Neerslag">3.5 mm</string>
    <string name="WeerOnbekend">Weergegevens niet beschikbaar</string>
    <string name="buienradar2u">buienradar 2u</string>
    <string name="uurVerwachting">Buienradar 2 uur</string>
    <string name="nodata">Geen gegevens</string>
    <string name="VerwachteNeerslag">Verwachte neerslag komende 2 uur:</string>
    <string name="verwacht2uur">Verwachte regen voor de komende 2 uur in</string>
    <string name="percent100">100%</string>
    <string name="maand">Maand</string>
    <string name="per_maand">Per maand</string>
    <string name="NoBrData">No Data</string>
    <string name="DroogTxt">Droog</string>
    <string name="NatTxt">Nat</string>
    <string name="laatste25">Laatste 25</string>
    <string name="clear_cache">Cache herstellen</string>
    <string name="weer">Weer</string>
    <string name="wind">Wind</string>
    <string name="menu">Menu</string>
    <string name="CacheBijwerken">Lokale cache bijwerken</string>
    <string name="MeldingVerwerken">Melding wordt opgeslagen</string>
    <string name="OnverwachteFoutOpslaanMelding">Onverwachte fout tijdens ophalen van laatste melding</string>
    <string name="BedanktMelding">Bedankt voor je melding</string>
    <string name="SwipeLinksOfRechts">Swipe rechts of links om terug en vooruit in de tijd gaan</string>
    <string name="vantmdatum" formatted="false">%s t/m %s</string>
    <string name="UurVdDag">Uur van de dag</string>
    <string name="AantalPerUur">Per uur v/d dag</string>
    <string name="GemmTemp">Gemiddelde temperatuur:</string>
    <string name="WeerType">Weertype</string>
    <string name="PerWeerType">Per weertype</string>
    <string name="Zoek">Zoek:</string>
    <string name="Kaart">Kaart</string>
    <string name="per">Per …</string>
    <string name="Weer">Weer …</string>
    <string name="Windrichting">Windrichting</string>
    <string name="per_maand_titel">%s-%s t/m %s-%s</string>
    <string name="PerWindRichting">% windrichting</string>
    <string name="Jaartal">(%s)</string>
    <string name="JaartalEnMaand">(%s-%s)</string>
    <string name="Jaar">Jaar</string>
    <string name="Maand">Maand</string>
    <string name="GeenGegevens">Geen gegevens</string>
    <string name="Windsnelheid">Windsnelheid</string>
    <string name="MaxTemp">Maximum temperatuur</string>
    <string name="MinTemp">Minimum temperatuur</string>
    <string name="MaxWindSnelheid">Maximum</string>
    <string name="GemmWindSnelheid">Gemiddeld</string>
    <string name="MinWindSnelheid">Minimum</string>
    <string name="instellingen">Instellingen</string>
    <string name="fa_map_marker">&#xf3c5;</string>
    <string name="fa_signal">&#xf012;</string>
    <string name="Alles">Alles</string>
    <string name="AantalPerDagVdWeek">Per dag v/d week</string>
    <string name="Weerrecords">Weerrecords</string>
    <string name="laagste_temperatuur">Laagste temperatuur</string>
    <string name="hoogste_temperatuur">Hoogste temperatuur</string>
    <string name="meeste_wind">Meeste wind</string>
    <string name="MinMaxTemp">%d °C op %s in %s</string>
    <string name="MaxWind">%s %d km/h op %s in %s</string>
    <string name="Natste_maand">Natste maand</string>
    <string name="Koud">Koud</string>
    <string name="Droogste_maand">Droogste maand</string>
    <string name="NatsteMaandTxt">%.1f %s nat in %s-%s</string>
    <string name="DroogsteMaandTxt">%.1f %s droog in %s-%s</string>
    <string name="Droogste_periode">Droogste periode</string>
    <string name="Natste_periode">Natste periode</string>
    <string name="NatstePeriodeTxt">%d dagen nat %s t/m %s</string>
    <string name="DroogstePeriodeTxt">%d dagen droog %s t/m %s</string>
    <string name="melding_droog">Melding droog</string>
    <string name="melding_nat">Melding nat</string>
    <string name="Standaard">Standaard</string>
    <string name="Satelliet">Satelliet</string>
</resources>
