<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnTerug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/back"
        app:useCompatPadding="true" />

    <TextView
        android:id="@+id/tvRecords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/Weerrecords"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivIjs"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/Koud"
        android:layout_below="@+id/tvRecords"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/imgijs" />

    <TextView
        android:id="@+id/tvLaagsteTemperatuur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivIjs"
        android:layout_below="@+id/tvRecords"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/ivIjs"
        android:text="@string/laagste_temperatuur"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMinTemperatuur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLaagsteTemperatuur"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/ivIjs"
        android:textColor="@color/colorTekst"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ivZon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/tvMinTemperatuur"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/droog"
        android:layout_marginTop="20dp"
        android:src="@drawable/imgdroog" />

    <TextView
        android:id="@+id/tvHoogsteTemperatuur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivZon"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/ivZon"
        android:text="@string/hoogste_temperatuur"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMaxTemperatuur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHoogsteTemperatuur"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/ivZon"
        android:textColor="@color/colorTekst"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ivWind"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/tvMaxTemperatuur"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/wind"
        android:src="@drawable/windspeed" />

    <TextView
        android:id="@+id/tvMeesteWind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivWind"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/ivWind"
        android:text="@string/meeste_wind"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMaxWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMeesteWind"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/ivWind"
        android:textColor="@color/colorTekst"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ivNat"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/tvMaxWind"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/NatTxt"
        android:src="@drawable/nat" />

    <TextView
        android:id="@+id/tvNatsteMaand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivNat"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/ivNat"
        android:text="@string/Natste_maand"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNatsteMaandTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNatsteMaand"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/ivNat"
        android:textColor="@color/colorTekst"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ivDroog"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/tvNatsteMaandTxt"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/NatTxt"
        android:src="@drawable/droog" />

    <TextView
        android:id="@+id/tvDroogsteMaand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivDroog"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/ivNat"
        android:text="@string/Droogste_maand"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDroogsteMaandTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDroogsteMaand"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/ivNat"
        android:textColor="@color/colorTekst"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ivPeriodeNat"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/tvDroogsteMaandTxt"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/NatTxt"
        android:src="@drawable/periodenat" />

    <TextView
        android:id="@+id/tvNatstePeriode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivPeriodeNat"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/ivPeriodeNat"
        android:text="@string/Natste_periode"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNatstePeriodeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNatstePeriode"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/ivNat"
        android:textColor="@color/colorTekst"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ivPeriodeDroog"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/tvNatstePeriodeTxt"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/NatTxt"
        android:src="@drawable/periodedroog" />

    <TextView
        android:id="@+id/tvDroogstePeriode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivPeriodeDroog"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/ivPeriodeDroog"
        android:text="@string/Droogste_periode"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDroogstePeriodeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDroogstePeriode"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/ivNat"
        android:textColor="@color/colorTekst"
        android:textSize="14sp" />

</RelativeLayout>