<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlPerUurVdDag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUurTitel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/AantalPerUur"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgAllesJaarMaand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:checkedButton="@+id/rbJaarMaand"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbAlles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/colorPrimary"
                android:text="@string/Alles"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbJaar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:buttonTint="@color/colorPrimary"
                android:text="@string/Jaar"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rbMaand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:buttonTint="@color/colorPrimary"
                android:text="@string/Maand"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </RadioGroup>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bcPerUurVdDag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:minHeight="200dp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnTerug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/back"
        app:useCompatPadding="true" />
</RelativeLayout>